Removed subscription id

--- a/deploy.ipynb
+++ b/deploy.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.get(name=\"Azure_projects\", subscription_id='d74ca76c-0758-4302-8894-12939776ca14', resource_group='fastai-practise')"
+    "ws = Workspace.get(name=\"Azure_projects\", subscription_id='<your-subscription-id>', resource_group='fastai-practise')"
    ]
   },
   {
